--- a/src/main/resources/static/src/app/movie/movie.component.html
+++ b/src/main/resources/static/src/app/movie/movie.component.html
@@ -1,20 +1,22 @@
-<h1 class ="movie-title">Search a Film by it's ID</h1>
-
-<div *ngIf="movie" class="movie-container">
-  <h1 class="movie-title">{{movie.title}}</h1>
-  <div class="movie-info">
-    <img alt="Movie Poster" class="movie-poster" src="https://image.tmdb.org/t/p/original/{{movie.posterPath}}">
-    <div class="movie-description">
-      <ul class="genre-list">
-        <li *ngFor="let genre of movie.genres" class="genre">{{genre.name}}</li>
-      </ul>
-      <p class="movie-description">{{movie.description}}</p>
+<h1 class="movie-title">Search a Film by it's ID</h1>
+<button class="genre" (click)="toggleHide()">Show</button>
+<div *ngIf="!isHidden">
+  <div *ngIf="movie" class="movie-container">
+    <h1 class="movie-title">{{movie.title}}</h1>
+    <div class="movie-info">
+      <img alt="Movie Poster" class="movie-poster" src="https://image.tmdb.org/t/p/original/{{movie.posterPath}}">
+      <div class="movie-description">
+        <ul class="genre-list">
+          <li *ngFor="let genre of movie.genres" class="genre">{{genre.name}}</li>
+        </ul>
+        <p class="movie-description">{{movie.description}}</p>
+      </div>
     </div>
   </div>
-</div>
-<div class="movie-info">
-  <button (click)="toggle()">Get Infos</button>
-  <form method="dialog">
-    <input type="number" id="tmdbId" name="myId" placeholder="TMDB Movie ID" (keyup.enter)="toggle()">
-  </form>
+  <div class="movie-info">
+    <button (click)="getInfo()">Get Info</button>
+    <form method="dialog">
+      <input type="number" id="tmdbId" name="myId" placeholder="TMDB Movie ID" (keyup.enter)="getInfo()">
+    </form>
+  </div>
 </div>
