Added most of the front end

--- a/src/main/resources/static/src/app/app.component.html
+++ b/src/main/resources/static/src/app/app.component.html
@@ -1,3 +1,9 @@
-<mtips-movie></mtips-movie>
+<mtips-header-navbar></mtips-header-navbar>
+<router-outlet></router-outlet>
+
+<!-- <mtips-account></mtips-account>
+ -->
+<!-- <mtips-movie></mtips-movie>
 <mtips-now-playing></mtips-now-playing>
 <mtips-recommendend></mtips-recommendend>
+ -->
