--- a/src/main/resources/static/src/styles.scss
+++ b/src/main/resources/static/src/styles.scss
@@ -8,3 +8,6 @@ $accent-color: #eb5e28;
 body {
   background-color: $secondary-color !important;
 }
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
