--- a/src/main/resources/static/src/app/recommendend/recommendend.component.html
+++ b/src/main/resources/static/src/app/recommendend/recommendend.component.html
@@ -1,10 +1,10 @@
-<h1>Recommended Movies by Account ID</h1>
-<button class="genre" (click)="toggleHide()">Show</button>
-<div *ngIf="!isHidden">
-  <div id="grid" *ngIf="movieList.length != 0">
-    <div class="left">
+<h1 class="movie-title">Recommended Movies by Account ID</h1>
+
+<div class="container" *ngIf="movieList.length != 0">
+  <div class="row">
+    <div class="col-sm">
       <div class="movie-container">
-        <h2 class="movie-title">{{movieList[0].title}}</h2>
+        <h2 class="movie-title">{{movieList[0].title}} ({{movieList[0].releaseDate | date : "y"}})</h2>
         <div class="movie-info">
           <img alt="Movie Poster" class="movie-poster"
             src="https://image.tmdb.org/t/p/original/{{movieList[0].posterPath}}">
@@ -17,12 +17,12 @@
         </div>
       </div>
     </div>
-    <div class="center">
+    <div class="col-sm">
       <div class="movie-container">
-        <h2 class="movie-title">{{movieList[1].title}}</h2>
+        <h2 class="movie-title">{{movieList[1].title}} ({{movieList[1].releaseDate | date : "y"}})</h2>
         <div class="movie-info">
           <img alt="Movie Poster" class="movie-poster"
-            src="https://image.tmdb.org/t/p/original/{{movieList[1].posterPath}}">
+            src="https://image.tmdb.org/t/p/original/{{movieList[1].posterPath}} ">
           <div class="movie-description">
             <ul class="genre-list">
               <li *ngFor="let genre of movieList[1].genres" class="genre">{{genre.name}}</li>
@@ -32,9 +32,9 @@
         </div>
       </div>
     </div>
-    <div class="right">
+    <div class="col-sm">
       <div class="movie-container">
-        <h2 class="movie-title">{{movieList[2].title}}</h2>
+        <h2 class="movie-title">{{movieList[2].title}} ({{movieList[2].releaseDate | date : "y"}})</h2>
         <div class="movie-info">
           <img alt="Movie Poster" class="movie-poster"
             src="https://image.tmdb.org/t/p/original/{{movieList[2].posterPath}}">
@@ -48,10 +48,10 @@
       </div>
     </div>
   </div>
-  <div class="movie-container">
-    <button (click)="getRecommended()">Get Recommended</button>
-    <form method="dialog">
-      <input type="number" id="account_id" name="myId" placeholder="Account ID" (keyup.enter)="getRecommended()">
-    </form>
-  </div>
+</div>
+<div class="movie-container">
+  <button (click)="getRecommended()">Get Recommended</button>
+  <form method="dialog">
+    <input type="number" id="account_id" name="myId" placeholder="Account ID" (keyup.enter)="getRecommended()">
+  </form>
 </div>
